@@ -1,14 +1,15 @@
 package pr_se.gogame.model;
 
-import pr_se.gogame.view_controller.DebugEvent;
-import pr_se.gogame.view_controller.StoneEvent;
+import pr_se.gogame.model.helper.GameCommand;
+import pr_se.gogame.model.helper.Position;
+import pr_se.gogame.model.helper.StoneColor;
+import pr_se.gogame.model.helper.UndoableCommand;
+import pr_se.gogame.view_controller.observer.DebugEvent;
+import pr_se.gogame.view_controller.observer.GameEvent;
 
 import java.util.*;
-import java.util.function.BiFunction;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
-
-import static pr_se.gogame.model.StoneColor.WHITE;
 
 
 /**
@@ -19,66 +20,51 @@ public class Board implements BoardInterface {
     /**
      * the Game that this Board belongs to
      */
-    private final Game GAME;
+    private final Game game;
 
     /**
      * the number of rows and columns of this board
      */
-    private final int SIZE;
+    private final int size;
 
     /**
      * the actual board
      */
-    private final StoneGroupPointer[][] board;
-
-    private int lastDebugX = -1;
-    private int lastDebugY = -1;
+    private final StoneGroupPointer[][] boardContents;
 
     /**
      * Creates a new Board belonging to the specified Game, containing handicap stones of the specified beginner color
      * (only if the Game has a handicap set)
      *
      * @param game the Game that this Board belongs to
+     * @param size the size of the board
      */
-    public Board(Game game) {
-        this.GAME = game;
-        this.SIZE = game.getSize();
-        this.board = new StoneGroupPointer[SIZE][SIZE];
+    public Board(Game game, int size) {
+        this.game = game;
+        this.size = size;
+        this.boardContents = new StoneGroupPointer[this.size][this.size];
+        StoneGroup.resetDebug();
     }
 
     @Override
-    public UndoableCommand setStone(int x, int y, StoneColor color, boolean prepareMode, boolean save) {
-        // Are the coordinates invalid?
-        if (areInvalidXYCoordinates(x, y)) {
-            throw new IllegalArgumentException("Coordinates X=" + x + ", Y=" + y + " are out of bounds for board");
-        }
+    public UndoableCommand setStone(int x, int y, final StoneColor color, final boolean prepareMode) {
+        checkXYCoordinates(x, y);
 
-        // is the StoneColor invalid?
         if(color == null) {
             throw new NullPointerException();
         }
 
-        // Is the space already occupied?
-        if (board[x][y] != null) {
+        if (boardContents[x][y] != null) {
             return null;
         }
 
         // Get liberties at these x and y coordinates
-        Set<Position> newStoneLiberties = getSurroundings(
-            x,
-            y,
-            (sgp) -> sgp == null,
-            (neighborX, neighborY) -> new Position(neighborX, neighborY)
-        );
+        Set<Position> newStoneLiberties = getSurroundings(x, y, Objects::isNull);
         StoneGroup newGroup = new StoneGroup(color, x, y, newStoneLiberties);
 
-        // Get neighbors at these x and y coordinates
-        Set<StoneGroup> surroundingSGs = getSurroundings(
-            x,
-            y,
-            (sgp) -> sgp != null,
-            (neighborX, neighborY) -> board[neighborX][neighborY].getStoneGroup()
-        );
+        // Get neighboring stone(group)s at these x and y coordinates
+        Set<StoneGroup> surroundingSGs = getSurroundings(x, y, Objects::nonNull).stream()
+            .map(p -> boardContents[p.getX()][p.getY()].getStoneGroup()).collect(Collectors.toSet());
 
         /*
          * Existing group of the same colour with maximum no. of liberties (which is relevant for the suicide-check)
@@ -88,211 +74,202 @@ public class Board implements BoardInterface {
             .max(Comparator.comparingInt(sg -> sg.getLiberties().size()))
             .orElse(newGroup);
 
-        final List<UndoableCommand> subcommands = new LinkedList<>();
-
         // Check for suicide
         boolean permittedSuicide = false;
-        boolean killAnother = false;
-        Set<StoneGroup> otherColorGroups = surroundingSGs.stream().filter(sg -> sg.getStoneColor() != color).collect(Collectors.toSet());
+        Set<StoneGroup> otherColorGroups = surroundingSGs.stream()
+            .filter(sg -> sg.getStoneColor() != color)
+            .collect(Collectors.toSet());
 
-        if (!prepareMode && newGroup.getLiberties().size() == 0 && (newGroup == firstSameColorGroup || firstSameColorGroup.getLiberties().size() == 1)) { // if adding this stone would take away all liberties from the group it's being added to
-            if (otherColorGroups.stream().noneMatch(sg -> sg.getLiberties().size() == 1)) { // if there are any groups of the opposite color with only one liberty, the attacker wins and the existing group is removed instead.
-                System.out.println("SUICIDE DETECTED!!!");
-                if (!GAME.getRuleset().getSuicide(firstSameColorGroup, newGroup)) {
-                    return null;
-                }
-                System.out.println("Suicide permitted.");
-                permittedSuicide = true;
-            } else {
-                killAnother = true;
+        /*
+         * if adding this stone would take away all liberties from the group it's being added to, and
+         * if there are no groups of the opposite color with only one liberty, that could thus be captured ...
+         */
+        if (!prepareMode && newGroup.getLiberties().isEmpty() && firstSameColorGroup.getLiberties().size() <= 1 &&
+            otherColorGroups.stream().noneMatch(sg -> sg.getLiberties().size() == 1)
+        ) {
+            if (!game.getRuleset().getSuicide(firstSameColorGroup, newGroup)) {
+                return null;
             }
+            permittedSuicide = true;
         }
 
         /*
-         * Merge newly-connected StoneGroups of the same color and remove the new stone's position from the liberties
+         * Merge newly connected StoneGroups of the same color and remove the new stone's position from the liberties
          * of all adjacent groups
          */
         Set<StoneGroup> sameColorGroups = new HashSet<>(surroundingSGs);
         sameColorGroups.removeAll(otherColorGroups);
         sameColorGroups.remove(firstSameColorGroup);
 
-        final UndoableCommand UC01_ADD_NEW_TO_FIRST = (firstSameColorGroup != newGroup) ? (firstSameColorGroup.mergeWithStoneGroup(newGroup)) : (null);
-        subcommands.add(UC01_ADD_NEW_TO_FIRST);
+        final List<UndoableCommand> subcommands = new LinkedList<>();
+
+        final UndoableCommand uc01AddNewToFirst = (firstSameColorGroup != newGroup) ? (firstSameColorGroup.mergeWithStoneGroup(newGroup)) : (null);
+        if(uc01AddNewToFirst != null) {
+            subcommands.add(uc01AddNewToFirst);
+        }
 
         for(StoneGroup sg : sameColorGroups) {
             subcommands.add(firstSameColorGroup.mergeWithStoneGroup(sg));
         }
 
-        final UndoableCommand UC03_REMOVE_NEW_POS_FROM_FIRST_LIBERTIES = firstSameColorGroup.removeLiberty(new Position(x, y)); // in case any of the now obsolete, "eaten" stone groups contained this liberty
-        subcommands.add(UC03_REMOVE_NEW_POS_FROM_FIRST_LIBERTIES);
+        final UndoableCommand uc02RemoveNewPosFromFirstLiberties = firstSameColorGroup.removeLiberty(new Position(x, y)); // in case any of the now obsolete, "eaten" stone groups contained this liberty
+        subcommands.add(uc02RemoveNewPosFromFirstLiberties);
 
         for(StoneGroup sg : otherColorGroups) {
             subcommands.add(sg.removeLiberty(new Position(x, y)));
         }
 
-        final boolean FINAL_PERMITTED_SUICIDE = permittedSuicide;
-        final UndoableCommand UC05_PLACE_POINTER = new UndoableCommand() {
+        final UndoableCommand uc03PlacePointer = (permittedSuicide) ? (null) : new UndoableCommand() {
             @Override
             public void execute(boolean saveEffects) {
-                if (!FINAL_PERMITTED_SUICIDE) {
-                    System.out.println("Placing stone down at " + x + ", " + y);
-                    board[x][y] =
-                        firstSameColorGroup.getPointers().stream()
-                            .findFirst()
-                            .orElseGet(() -> new StoneGroupPointer(newGroup));
-                }
+                boardContents[x][y] =
+                    firstSameColorGroup.getPointers().stream()
+                        .findFirst()
+                        .orElseGet(() -> new StoneGroupPointer(newGroup));
             }
 
             @Override
             public void undo() {
-                board[x][y] = null;
+                boardContents[x][y] = null;
             }
         };
-        UC05_PLACE_POINTER.execute(true);
-        subcommands.add(UC05_PLACE_POINTER);
+        if(uc03PlacePointer != null) {
+            uc03PlacePointer.execute(true);
+            subcommands.add(uc03PlacePointer);
+        }
 
-        final boolean FINAL_KILL_ANOTHER = killAnother;
+        UndoableCommand uc04RemoveCapturedStones = (prepareMode) ? (null) : removeGroupsWithoutLiberties(surroundingSGs, color, permittedSuicide);
+        if(uc04RemoveCapturedStones != null) {
+            subcommands.add(uc04RemoveCapturedStones);
+        }
 
-        final UndoableCommand UC06_REMOVE_CAPTURED_STONES = new UndoableCommand() {
-            final LinkedList<UndoableCommand> UC06_01_REMOVE_STONE_COMMANDS = new LinkedList<>();
-            UndoableCommand uC06_02_addCapturedStonesCommand = null;
-
-            @Override
-            public void execute(boolean saveEffects) {
-                if (!prepareMode) {
-
-                    for (StoneGroup sg : surroundingSGs) {
-                        if ((sg.getStoneColor() != color || !FINAL_KILL_ANOTHER) && sg.getLiberties().size() == 0) {
-                            int captured = 0;
-                            for (Position p : sg.getLocations()) {
-                                UC06_01_REMOVE_STONE_COMMANDS.add(removeStone(p.X, p.Y, true));
-                                captured++;
-                                System.out.println("remove: " + p.X + " / " + p.Y);
-                            }
-                            uC06_02_addCapturedStonesCommand = GAME.addCapturedStones(color, captured);
-                        }
-                    }
-
-                    if(save && saveEffects) {
-                        /*
-                         * if(prepareMode) {
-                         *      GAME.getFileTree().bufferStonesBeforeGame(color, x, y);
-                         * } else {
-                         *      GAME.getFileTree().addStone(color, x, y);
-                         * }
-                         */
-                    }
-                }
-
-                // Update UI if possible
-                if (!FINAL_PERMITTED_SUICIDE) {
-                    fireStoneSet(x, y, color, prepareMode);
-                }
-            }
-
-            @Override
-            public void undo() {
-                for(UndoableCommand c : UC06_01_REMOVE_STONE_COMMANDS) {
-                    c.undo();
-                }
-
-                // TODO: Saving won't be undone, will it?
-
-                if(uC06_02_addCapturedStonesCommand != null) {
-                    uC06_02_addCapturedStonesCommand.undo();
-                }
-
-                fireStoneRemoved(x, y); // TODO: Do we need a check for FINAL_PERMITTED_SUICIDE here?
-            }
-        };
-        UC06_REMOVE_CAPTURED_STONES.execute(true);
-        subcommands.add(UC06_REMOVE_CAPTURED_STONES);
-
-        final UndoableCommand UC07_CHECK_KO = GAME.getRuleset().isKo(GAME);
-        subcommands.add(UC07_CHECK_KO);
-        final List<UndoableCommand> SUBCOMMANDS = Collections.unmodifiableList(subcommands);
+        final List<UndoableCommand> finalSubCommands = List.copyOf(subcommands);
 
         UndoableCommand ret = new UndoableCommand() {
             @Override
             public void execute(boolean saveEffects) {
-                for(UndoableCommand c : SUBCOMMANDS) {
-                    if(c != null) {
-                        c.execute(true);
-                    }
+                finalSubCommands.forEach(c -> c.execute(saveEffects));
+            }
+
+            @Override
+            public void undo() {
+                // Undoing it the other way round just in case.
+                ListIterator<UndoableCommand> i = finalSubCommands.listIterator(finalSubCommands.size());
+                while(i.hasPrevious()) {
+                    UndoableCommand c = i.previous();
+                    c.undo();
+                }
+            }
+        };
+        // No execute() this time, as we've already executed the subcommands piecemeal.
+        if(uc04RemoveCapturedStones != null) {
+            ret.getExecuteEvents().addAll(uc04RemoveCapturedStones.getExecuteEvents());
+            ret.getUndoEvents().addAll(uc04RemoveCapturedStones.getUndoEvents());
+        }
+        if(!permittedSuicide) {
+            ret.getExecuteEvents().add(new GameEvent(GameCommand.STONE_WAS_SET, x, y, color, game.getCurMoveNumber()));
+            ret.getUndoEvents().add(new GameEvent(GameCommand.STONE_WAS_REMOVED, x, y, null, game.getCurMoveNumber()));
+        }
+
+
+        return ret;
+    }
+
+    private UndoableCommand removeGroupsWithoutLiberties(final Set<StoneGroup> surroundingSGs, final StoneColor color, final boolean permittedSuicide) {
+        final List<UndoableCommand> retList = new LinkedList<>();
+        final List<GameEvent> executeEvents = new LinkedList<>();
+        final List<GameEvent> undoEvents = new LinkedList<>();
+
+        int totalCaptured = 0;
+        int totalSuicide = 0;
+
+        Set<StoneGroup> deadGroups = surroundingSGs.stream()
+                .filter(sg -> (sg.getStoneColor() != color || permittedSuicide) && sg.getLiberties().isEmpty())
+                .collect(Collectors.toSet());
+        for (StoneGroup sg : deadGroups) {
+            for (Position p : sg.getLocations()) {
+                UndoableCommand tmpCmd = removeStone(p.getX(), p.getY());
+                retList.add(tmpCmd);
+                executeEvents.addAll(tmpCmd.getExecuteEvents());
+                undoEvents.addAll(tmpCmd.getUndoEvents());
+            }
+            if(sg.getStoneColor() != color) {
+                totalCaptured += sg.getLocations().size();
+            } else {
+                totalSuicide += sg.getLocations().size();
+            }
+        }
+
+        if(totalCaptured > 0) {
+            retList.add(game.addCapturedStones(color, totalCaptured));
+        }
+        if(totalSuicide > 0) {
+            retList.add(game.addCapturedStones(StoneColor.getOpposite(color), totalSuicide));
+        }
+
+        final List<UndoableCommand> finalRetList = List.copyOf(retList);
+
+        UndoableCommand ret = new UndoableCommand() {
+            @Override
+            public void execute(boolean saveEffects) {
+                for(UndoableCommand c : finalRetList) {
+                    c.execute(saveEffects);
                 }
             }
 
             @Override
             public void undo() {
                 // Undoing it the other way round just in case.
-                ListIterator<UndoableCommand> i = SUBCOMMANDS.listIterator(SUBCOMMANDS.size());
+                ListIterator<UndoableCommand> i = finalRetList.listIterator(finalRetList.size());
                 while(i.hasPrevious()) {
                     UndoableCommand c = i.previous();
-                    if(c != null) {
-                        c.undo();
-                    }
+                    c.undo();
                 }
             }
         };
-        // No execute() this time, as we've already executed the subcommands piecemeal.
+        ret.getExecuteEvents().addAll(executeEvents);
+        ret.getUndoEvents().addAll(undoEvents);
 
-        System.out.println();
-
-
-        if(UC07_CHECK_KO == null) {
-            ret.undo();
-            return null;
-        }
 
         return ret;
     }
 
     @Override
-    public UndoableCommand removeStone(int x, int y, boolean save) {
-        if(areInvalidXYCoordinates(x, y)) {
-            throw new IllegalArgumentException("Coordinates X=" + x + ", Y=" + y + " are out of bounds for board");
-        }
+    public UndoableCommand removeStone(int x, int y) {
+        checkXYCoordinates(x, y);
 
-        final StoneGroupPointer BOARD_AT_XY_PREVIOUSLY = board[x][y];
+        final StoneGroupPointer boardAtXyPreviously = boardContents[x][y];
 
         UndoableCommand ret = new UndoableCommand() {
 
-            final List<UndoableCommand> ADD_LIBERTY_COMMANDS = new LinkedList<>();
+            final List<UndoableCommand> addLibertyCommands = new LinkedList<>();
 
             @Override
             public void execute(boolean saveEffects) {
-                board[x][y] = null;
+                boardContents[x][y] = null;
 
-                if(save && saveEffects) {
-                    // GAME.getFileTree().removeStone(x, y);
-                }
-
-                Set<StoneGroup> surroundingSGs = getSurroundings(
-                    x,
-                    y,
-                    (sgp) -> sgp != null,
-                    (neighborX, neighborY) -> board[neighborX][neighborY].getStoneGroup()
-                );
+                Set<StoneGroup> surroundingSGs = getSurroundings(x, y, Objects::nonNull).stream()
+                    .map(p -> boardContents[p.getX()][p.getY()].getStoneGroup()).collect(Collectors.toSet());
                 for (StoneGroup sg : surroundingSGs) {
-                    ADD_LIBERTY_COMMANDS.add(sg.addLiberty(new Position(x, y)));
+                    addLibertyCommands.add(sg.addLiberty(new Position(x, y)));
                 }
 
                 // Update UI
-                fireStoneRemoved(x, y);
+                if(saveEffects) {
+                    getExecuteEvents().add(new GameEvent(GameCommand.STONE_WAS_REMOVED, x, y, null, game.getCurMoveNumber()));
+                    if(boardAtXyPreviously != null) {
+                        getUndoEvents().add(new GameEvent(GameCommand.STONE_WAS_SET, x, y, boardAtXyPreviously.getStoneGroup().getStoneColor(), game.getCurMoveNumber()));
+                    }
+                }
             }
 
             @Override
             public void undo() {
-                board[x][y] = BOARD_AT_XY_PREVIOUSLY;
+                boardContents[x][y] = boardAtXyPreviously;
 
-                // TODO: Saving won't be undone, will it?
-
-                for(UndoableCommand c : ADD_LIBERTY_COMMANDS) {
+                for(UndoableCommand c : addLibertyCommands) {
                     c.undo();
                 }
-
-                // Update UI
-                fireStoneSet(x, y, board[x][y].getStoneGroup().getStoneColor(), false);
             }
         };
         ret.execute(true);
@@ -303,76 +280,30 @@ public class Board implements BoardInterface {
     // Private methods
 
     /**
-     * Notifies all listeners that a stone has been set.
-     *
-     * @param x Horizontal coordinate from 0 to size-1, starting on the left
-     * @param y Vertical coordinate from 0 to size-1, starting on the top
-     * @param c the StoneColor of the stone that has been set
-     */
-    private void fireStoneSet(int x, int y, StoneColor c, boolean prepareMode) {
-        GameCommand gc = GameCommand.BLACK_STONE_SET;
-        if (c == WHITE) {
-            gc = GameCommand.WHITE_STONE_SET;
-        }
-
-        System.out.println("cur move number: "+GAME.getCurMoveNumber());
-        StoneEvent e = new StoneEvent(gc, x, y, GAME.getCurMoveNumber());
-        GAME.fireGameEvent(e);
-    }
-
-    /**
-     * Notifies all listeners that a stone has been removed.
-     *
-     * @param x Horizontal coordinate from 0 to size-1, starting on the left
-     * @param y Vertical coordinate from 0 to size-1, starting on the top
-     */
-    private void fireStoneRemoved(int x, int y) {
-        GameCommand gc = GameCommand.BLACK_HAS_CAPTURED;
-        if (GAME.getCurColor() == WHITE) {
-            gc = GameCommand.WHITE_HAS_CAPTURED;
-        }
-        StoneEvent e = new StoneEvent(gc, x, y, GAME.getCurMoveNumber());
-
-        GAME.fireGameEvent(e);
-    }
-
-    public Set<StoneColor> getNeighborColors(int x, int y) {
-        return getSurroundings(
-                x,
-                y,
-                (sgp) -> sgp != null,
-                (neighborX, neighborY) -> board[neighborX][neighborY].getStoneGroup().getStoneColor()
-        );
-    }
-
-    /**
      * Checks the space above, below, to the right and left of the one marked by x and y for StoneGroupPointers
-     * fulfilling the predicate check, returning a Set of at most four elements that have been converted by conversion.
+     * fulfilling the predicate check, returning a Set of at most four positions.
      *
      * @param x          Horizontal coordinate from 0 to size-1, starting on the left
      * @param y          Vertical coordinate from 0 to size-1, starting on the top
      * @param check      the condition that a surrounding tile has to fulfill to be added ot the returned Set
-     * @param conversion a BiFunction taking an x and y coordinate from this method and returning something caller-defined based on those coordinates
      * @return a Set of at most four unique elements converted by conversion that are above, below, to the left and right of the provided x and y coordinate and fulfill check
      */
-    private Set getSurroundings(int x, int y, Predicate<StoneGroupPointer> check, BiFunction<Integer, Integer, ?> conversion) {
-        if (areInvalidXYCoordinates(x, y)) {
-            throw new IllegalArgumentException("Coordinates X=" + x + ", Y=" + y + " are out of bounds for board");
-        }
+    private Set<Position> getSurroundings(int x, int y, Predicate<StoneGroupPointer> check) {
+        checkXYCoordinates(x, y);
 
-        Set surroundings = new HashSet<>();
+        Set<Position> surroundings = new HashSet<>();
 
-        if (y > 0 && check.test(board[x][y - 1])) {
-            surroundings.add(conversion.apply(x, y - 1));
+        if (y > 0 && check.test(boardContents[x][y - 1])) {
+            surroundings.add(new Position(x, y - 1));
         }
-        if (y < SIZE - 1 && check.test(board[x][y + 1])) {
-            surroundings.add(conversion.apply(x, y + 1));
+        if (y < size - 1 && check.test(boardContents[x][y + 1])) {
+            surroundings.add(new Position(x, y + 1));
         }
-        if (x > 0 && check.test(board[x - 1][y])) {
-            surroundings.add(conversion.apply(x - 1, y));
+        if (x > 0 && check.test(boardContents[x - 1][y])) {
+            surroundings.add(new Position(x - 1, y));
         }
-        if (x < SIZE - 1 && check.test(board[x + 1][y])) {
-            surroundings.add(conversion.apply(x + 1, y));
+        if (x < size - 1 && check.test(boardContents[x + 1][y])) {
+            surroundings.add(new Position(x + 1, y));
         }
 
         return surroundings;
@@ -381,53 +312,42 @@ public class Board implements BoardInterface {
     // Getters and Setters
     @Override
     public int getSize() {
-        return SIZE;
+        return size;
     }
 
     @Override
     public StoneColor getColorAt(int x, int y) {
-        if(areInvalidXYCoordinates(x, y)) {
-            throw new IllegalArgumentException("Coordinates X=" + x + ", Y=" + y + " are out of bounds for board");
-        }
+        checkXYCoordinates(x, y);
 
-        if (board[x][y] != null) {
-            return board[x][y].getStoneGroup().getStoneColor();
+        if (boardContents[x][y] != null) {
+            return boardContents[x][y].getStoneGroup().getStoneColor();
         } else {
             return null;
         }
     }
 
-    // TODO: Remove these debug methods
     public void printDebugInfo(int x, int y) {
-        if(areInvalidXYCoordinates(x, y)) {
-            throw new IllegalArgumentException("Coordinates X=" + x + ", Y=" + y + " are out of bounds for board");
-        }
+        checkXYCoordinates(x, y);
 
-        if (board[x][y] != null && !(x == lastDebugX && y == lastDebugY)) {
-            System.out.println("Group at " + x + ", " + y + ":");
-            System.out.println("Liberties: " + board[x][y].getStoneGroup().getLiberties().size());
-        }
-
-        for (int i = 0; i < SIZE; i++) {
-            for (int j = 0; j < SIZE; j++) {
-                if (board[i][j] != null) {
-                    DebugEvent e = new DebugEvent(i, j, board[i][j].serialNo, board[i][j].getStoneGroup().serialNo);
-                    GAME.fireGameEvent(e);
+        for (int i = 0; i < size; i++) {
+            for (int j = 0; j < size; j++) {
+                if (boardContents[i][j] != null) {
+                    DebugEvent e = new DebugEvent(i, j, boardContents[i][j].serialNo, boardContents[i][j].getStoneGroup().serialNo);
+                    game.fireGameEvent(e);
                 }
             }
         }
 
-        lastDebugX = x;
-        lastDebugY = y;
     }
 
     /**
      * Tests whether these x and y coordinates are outside the bounds of the playing field
      * @param x x coordinate starting at the left
      * @param y y coordinate starting at the top
-     * @return whether these x and y coordinates are outside the playing field.
      */
-    private boolean areInvalidXYCoordinates(int x, int y) {
-        return x < 0 || y < 0 || x >= SIZE || y >= SIZE;
+    private void checkXYCoordinates(int x, int y) throws IllegalArgumentException {
+        if(x < 0 || y < 0 || x >= size || y >= size) {
+            throw new IllegalArgumentException("Coordinates X=" + x + ", Y=" + y + " are out of bounds for board.");
+        }
     }
 }
